--- a/public/admin/dashboard.twig
+++ b/public/admin/dashboard.twig
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Dashboard</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/public/admin/admin-style.css">
-</head>
+    {% include 'admin/parts/head.twig' %}
 <body>
 
 <div class="container-fluid">
-    {% include 'admin_front/parts/header.twig' %}
+    {% include 'admin/parts/header.twig' %}
     <!-- navbar -->
 
     {% if deleteMessage is defined %}
@@ -46,9 +37,9 @@
                     </form>
                     <a href="/news/edit/{{ oneNews.id }}" class="btn btn-primary float-right" role="button">Edit</a>
                     <a href="/news/{{ oneNews.id }}" class="btn btn-success float-right" role="button">Info</a>
-                    <span>{{ oneNews.title }}</span>
-                    <img src="{{ oneNews.image }}" alt="">
-                    <span class="float-right" style="margin-right:5px;">{{ oneNews.created|date("M/d/Y") }}</span>
+                    <span class="title"><i>{{ oneNews.title }}</i></span>
+                    <span><img src="" alt="" width="100px" height="100px"></span>
+                    <span class="float-right date" >{{ oneNews.created|date("M/d/Y") }}</span>
                 </th>
             </tr>
             </thead>
@@ -61,8 +52,6 @@
         </table>
     </div>
     <!-- end table -->
-
 </div>
-
 </body>
 </html>
