--- a/public/admin/login.twig
+++ b/public/admin/login.twig
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Dashboard</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/public/admin/admin-style.css">
-</head>
+    {% include 'admin/parts/head.twig' %}
 <body>
 
 <div class="container-fluid">
@@ -28,16 +19,16 @@
                 </div>
                 <!--card body-->
                 <div class="card-body">
-                    <form class="form" action="/login" method="POST" id="news-form">
+                    <form class="form" action="/login" method="POST" id="loginForm">
                         <div class="form-group">
-                            <label for="title">Email: </label>
-                            <input type="text" class="form-control" name="email" >
+                            <label for="email">Email: </label>
+                            <input type="text" class="form-control" name="email" placeholder="Email" >
                         </div>
                         <div class="form-group">
-                            <label for="content">Password: </label>
+                            <label for="password">Password: </label>
                             <div class="row mb-1">
                                 <div class="col-lg-12">
-                                    <input type="password" class="form-control" name="password" >
+                                    <input type="password" class="form-control" name="password" placeholder="Password" >
                                 </div>
                             </div>
                         </div>
@@ -52,4 +43,5 @@
     <!-- end form -->
 </div>
 </body>
+    <script src="/public/admin/assets/validation.js"></script>
 </html>
