--- a/public/admin/dashboard.twig
+++ b/public/admin/dashboard.twig
@@ -27,7 +27,7 @@
                 <p>Ovde se nalaze sve vesti sa sajta</p>
             </div>
         </div>
-        <table class="table table-hover table-light">
+        {#<table class="table table-hover table-light">
             {% for oneNews in news %}
             <thead>
             <tr>
@@ -49,7 +49,27 @@
             </tr>
             </tbody>
             {% endfor %}
-        </table>
+        </table>#}
+        <div class="row">
+        {% for oneNews in news %}
+        <div class="col-4">
+            <div class="card">
+                <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt=".">
+                <div class="card-body">
+                    <h5 class="card-title">{{ oneNews.title }}<span class="float-right date" >{{ oneNews.created|date("M/d/Y") }}</span></h5>
+                    <p class="card-text">{{ oneNews.content|slice(0,70) }}</p>
+                    <div class="admin-buttons">
+                        <form action="/news/delete/{{ oneNews.id }}" method="post">
+                            <button type="submit" class="btn btn-danger float-right" role="button">Delete</button>
+                        </form>
+                        <a href="/news/edit/{{ oneNews.id }}" class="btn btn-primary float-right" role="button">Edit</a>
+                        <a href="/news/{{ oneNews.id }}" class="btn btn-success float-right" role="button">Info</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        </div>
     </div>
     <!-- end table -->
 </div>
