--- a/public/admin/single-news.twig
+++ b/public/admin/single-news.twig
@@ -9,8 +9,7 @@
 
     <!-- table -->
     <div class="container">
-        <a href="/dashboard" class="btn btn-light go-back" role="button">Go Back</a>
-        <table class="table table-hover table-light">
+       {# <table class="table table-hover table-light">
                 <thead>
                 <tr>
                     <th scope="col" class="admin-buttons">
@@ -28,7 +27,35 @@
                     <td scope="row">{{ news.content }}</td>
                 </tr>
                 </tbody>
-        </table>
+        </table>#}
+        <div class="col-md-7 offset-2">
+            <a href="/dashboard" class="btn btn-light go-back" role="button">Go Back</a>
+        <div class="card card-outline-secondary NewsForm">
+            <div class="card-header">
+                <h3 class="mb-0 headingForm">Detalji Vesti</h3>
+            </div>
+            <!--card body-->
+            <div class="card-body">
+                <div class="form-group">
+                    <img src="https://i.imgur.com/KOLbQBX.png" class="w-100" alt="">
+                </div>
+                    <div class="form-group">
+                        <p><b>Naslov:</b></p><p>{{ news.title }}<span class="float-right" style="margin-right:5px;">{{ news.created|date("M/d/Y") }}</span></p>
+                    </div>
+                    <div class="form-group">
+                        <p><b>Tekst:</b></p><p>{{ news.content }}</p>
+                    </div>
+                <div class="admin-buttons">
+                <form action="/news/delete/{{ news.id }}" method="post">
+                    <button type="submit" class="btn btn-danger float-right" role="button">Delete</button>
+                </form>
+                <a href="/news/edit/{{ news.id }}" class="btn btn-primary float-right" role="button">Edit</a>
+                </div>
+            </div>
+            <!--/card-body-->
+        </div></div>
+        <!--/card-body-->
+    </div>
     </div>
     <!-- end table -->
 
