--- a/public/admin/update-news.twig
+++ b/public/admin/update-news.twig
@@ -21,6 +21,14 @@
                 </div>
                 <!--card body-->
                 <div class="card-body">
+                    <form action="#" method="post">
+                        <div class="form-group">
+                            <img src="https://i.imgur.com/KOLbQBX.png" class="w-100" alt="">
+                        </div>
+                        <div class="col-12 text-center mb-4">
+                            <button type="submit" class="btn btn-danger" role="button">Delete</button>
+                        </div>
+                    </form>
                     <form class="form" action="/news/update/{{ news.id }}" method="POST" id="news-form">
                         <div class="form-group">
                             <label for="title">Izmeni Naslov</label>
@@ -44,7 +52,7 @@
                         </div>
                         <div class="form-group">
                             <label for="image">Unesi Sliku</label>
-                            <input type="text" class="form-control" name="image" value="{{ news.image }}" >
+                            <input type="file" class="form-control" name="image" value="{{ news.image }}" >
                         </div>
                         <div class="form-group">
                             <label for="language">Izaberi Jezik</label>
