adopted new ORM

--- a/public/admin/update-news.twig
+++ b/public/admin/update-news.twig
@@ -45,7 +45,7 @@
                         <div class="form-group">
                             <label for="category">Izaberi Kategoriju</label>
                             <select  name="category" class="form-control">
-                                <option value="projekt"{% if news.category == 'projekat' %} selected="selected" {% endif %}>projekt</option>
+                                <option value="projekt"{% if news.category == 'projekt' %} selected="selected" {% endif %}>projekt</option>
                                 <option value="blog"{% if news.category == 'blog' %} selected="selected" {% endif %}>blog</option>
                                 <option value="vest"{% if news.category == 'vest' %} selected="selected" {% endif %}>vest</option>
                             </select>
