--- a/public/admin/parts/header.twig
+++ b/public/admin/parts/header.twig
@@ -10,6 +10,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/news/create">Create News</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/album/create">Create Album</a>
+            </li>
         </ul>
         <!-- Links -->
         <div class="navbar-collapse justify-content-end" id="nav-content">
