added AlbumService methods

--- a/public/admin/parts/header.twig
+++ b/public/admin/parts/header.twig
@@ -5,7 +5,10 @@
         <a class="navbar-brand" href="#">upnp</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
+                <a class="nav-link" href="/dashboard">News</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/album/albums">Albums</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/news/create">Create News</a>
