--- a/public/admin/album/albums.twig
+++ b/public/admin/album/albums.twig
@@ -22,7 +22,10 @@
             <a class="navbar-brand" href="#">upnp</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/dashboard">Dashboard</a>
+                    <a class="nav-link" href="/dashboard">News</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/album/albums">Albums</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/news/create">Create News</a>
@@ -51,7 +54,12 @@
     <!-- form -->
     <div class="container">
         <div class="col-md-10 offset-1">
-            <a href="/dashboard" class="btn btn-light go-back" role="button">Go Back</a>
+            <div class="jumbotron jumbotron headingForm">
+                <div class="container">
+                    <h1>Albumi</h1>
+                    <p>Ovde se nalaze svi albumi sa sajta</p>
+                </div>
+            </div>
             <!-- form  -->
             <div class="card card-outline-secondary NewsForm">
                 <div class="card-header">
@@ -61,11 +69,12 @@
                 <div class="card-body">
                     <form class="form" action="#">
                         <div class="row mb-2">
+                            {% for album in albums %}
                             <div class="col-md-4 my-2">
                                 <div class="card">
                                     <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt="Card image cap">
                                     <div class="card-body">
-                                        <h5 class="card-title">Title Album</h5>
+                                        <h5 class="card-title">{{ album.title }}</h5>
                                         <a href="#" class="btn btn-primary float-left mr-1" role="button">Edit</a>
                                         <form action="#" method="post">
                                             <button type="submit" class="btn btn-danger float-left px-3 py-2" role="button">Delete
@@ -74,110 +83,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4 my-2">
-                                <div class="card">
-                                    <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Title Album</h5>
-                                        <a href="#" class="btn btn-primary float-left mr-1" role="button">Edit</a>
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger float-left px-3 py-2" role="button">Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="card">
-                                    <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Title Album</h5>
-                                        <a href="#" class="btn btn-primary float-left mr-1" role="button">Edit</a>
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger float-left px-3 py-2" role="button">Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="card">
-                                    <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Title Album</h5>
-                                        <a href="#" class="btn btn-primary float-left mr-1" role="button">Edit</a>
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger float-left px-3 py-2" role="button">Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="card">
-                                    <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Title Album</h5>
-                                        <a href="#" class="btn btn-primary float-left mr-1" role="button">Edit</a>
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger float-left px-3 py-2" role="button">Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="card">
-                                    <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Title Album</h5>
-                                        <a href="#" class="btn btn-primary float-left mr-1" role="button">Edit</a>
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger float-left px-3 py-2" role="button">Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="card">
-                                    <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Title Album</h5>
-                                        <a href="#" class="btn btn-primary float-left mr-1" role="button">Edit</a>
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger float-left px-3 py-2" role="button">Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="card">
-                                    <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Title Album</h5>
-                                        <a href="#" class="btn btn-primary float-left mr-1" role="button">Edit</a>
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger float-left px-3 py-2" role="button">Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="card">
-                                    <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Title Album</h5>
-                                        <a href="#" class="btn btn-primary float-left mr-1" role="button">Edit</a>
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger float-left px-3 py-2" role="button">Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
+                            {% endfor %}
                         </div>
                         <div class="admin-buttons">
                             {#<form action="#" method="post">
