--- a/public/admin/album/create.twig
+++ b/public/admin/album/create.twig
@@ -22,7 +22,10 @@
             <a class="navbar-brand" href="#">upnp</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/dashboard">Dashboard</a>
+                    <a class="nav-link" href="/dashboard">News</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/album/albums">Albums</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/news/create">Create News</a>
@@ -51,7 +54,7 @@
     <!-- form -->
     <div class="container">
         <div class="col-md-7 offset-2">
-            <a href="/dashboard" class="btn btn-light go-back" role="button">Go Back</a>
+            <a href="/album/albums" class="btn btn-light go-back" role="button">Go Back</a>
             <!-- form  -->
             <div class="card card-outline-secondary NewsForm">
                 <div class="card-header">
@@ -59,7 +62,7 @@
                 </div>
                 <!--card body-->
                 <div class="card-body">
-                    <form class="form" action="/news/create" method="POST" id="createForm" enctype="multipart/form-data">
+                    <form class="form" action="/album/create" method="POST" id="createForm" enctype="multipart/form-data">
                         <div class="form-group">
                             <label for="title">Unesi Naslov</label>
                             <input type="text" class="form-control" name="title" >
