--- a/public/admin/create-news.twig
+++ b/public/admin/create-news.twig
@@ -56,6 +56,14 @@
                             <input type="file" class="form-control" name="image" accept="image/jpeg,image/png,image/jpg">
                         </div>
                         <div class="form-group">
+                            <label for="category">Izaberi Album</label>
+                            <select  name="album" class="form-control">
+                                {% for album in albums %}
+                                <option value="{{ album.id }}">{{ album.title }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="form-group">
                             <label for="language">Izaberi Jezik</label>
                             <select id="language" name="language" class="form-control">
                                 <option value="serbian">serbian</option>
