--- a/public/admin/single-news.twig
+++ b/public/admin/single-news.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% include 'admin/parts/head.twig' %}
+{% include 'admin/parts/head.twig' %}
 <body>
 
 <div class="container-fluid">
@@ -9,55 +9,66 @@
 
     <!-- table -->
     <div class="container">
-       {# <table class="table table-hover table-light">
-                <thead>
-                <tr>
-                    <th scope="col" class="admin-buttons">
-                        <form action="/news/delete/{{ news.id }}" method="post">
-                            <button type="submit" class="btn btn-danger float-right" role="button">Delete</button>
-                        </form>
-                        <a href="/news/edit/{{ news.id }}" class="btn btn-primary float-right" role="button">Edit</a>
-                        <span>{{ news.title }}</span>
-                        <span class="float-right" style="margin-right:5px;">{{ news.created|date("M/d/Y") }}</span>
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td scope="row">{{ news.content }}</td>
-                </tr>
-                </tbody>
-        </table>#}
+        {# <table class="table table-hover table-light">
+                 <thead>
+                 <tr>
+                     <th scope="col" class="admin-buttons">
+                         <form action="/news/delete/{{ news.id }}" method="post">
+                             <button type="submit" class="btn btn-danger float-right" role="button">Delete</button>
+                         </form>
+                         <a href="/news/edit/{{ news.id }}" class="btn btn-primary float-right" role="button">Edit</a>
+                         <span>{{ news.title }}</span>
+                         <span class="float-right" style="margin-right:5px;">{{ news.created|date("M/d/Y") }}</span>
+                     </th>
+                 </tr>
+                 </thead>
+                 <tbody>
+                 <tr>
+                     <td scope="row">{{ news.content }}</td>
+                 </tr>
+                 </tbody>
+         </table>#}{% for oneNew in news %}
         <div class="col-md-7 offset-2">
             <a href="/dashboard" class="btn btn-light go-back" role="button">Go Back</a>
-        <div class="card card-outline-secondary NewsForm">
-            <div class="card-header">
-                <h3 class="mb-0 headingForm">Detalji Vesti</h3>
-            </div>
-            <!--card body-->
-            <div class="card-body">
-                <div class="form-group">
-                    <img src="https://i.imgur.com/KOLbQBX.png" class="w-100" alt="">
+            <div class="card card-outline-secondary NewsForm">
+                <div class="card-header">
+                    <h3 class="mb-0 headingForm">Detalji Vesti</h3>
                 </div>
+                <!--card body-->
+                <div class="card-body">
                     <div class="form-group">
-                        <p><b>Naslov:</b></p><p>{{ news.title }}<span class="float-right" style="margin-right:5px;">{{ news.created|date("M/d/Y") }}</span></p>
+                        <img src="{{ oneNew.images.url }}" class="w-100" alt="picture">
                     </div>
                     <div class="form-group">
-                        <p><b>Tekst:</b></p><p>{{ news.content }}</p>
+                        <p><b>Naslov:</b></p>
+                        <p>{{ oneNew.title }}<span class="float-right">{{ oneNew.created|date("M/d/Y") }}</span></p>
                     </div>
-                <div class="admin-buttons">
-                <form action="/news/delete/{{ news.id }}" method="post">
-                    <button type="submit" class="btn btn-danger float-right" role="button">Delete</button>
-                </form>
-                <a href="/news/edit/{{ news.id }}" class="btn btn-primary float-right" role="button">Edit</a>
-                </div>
+                    <div class="form-group"><hr>
+                        <p><b>Tekst:</b></p>
+                        <p>{{ oneNew.content }}</p>
+                    </div>
+                    <div class="form-group"><hr>
+                        <p><b>Kategorija:</b></p>
+                        <p>{{ oneNew.category }}</p>
+                    </div>
+                    <div class="form-group"><hr>
+                        <p><b>Jezik:</b></p>
+                        <p>{{ oneNew.language }}</p>
+                    </div>
+                    <div class="admin-buttons"><hr>
+                        <form action="/news/delete/{{ oneNew.id }}" method="post">
+                            <button type="submit" class="btn btn-danger float-right" role="button">Delete</button>
+                        </form>
+                        <a href="/news/edit/{{ oneNew.id }}" class="btn btn-primary float-right" role="button">Edit</a>
+                    </div>
+                </div>{% endfor %}
+                <!--/card-body-->
             </div>
-            <!--/card-body-->
-        </div></div>
+        </div>
         <!--/card-body-->
     </div>
-    </div>
-    <!-- end table -->
+</div>
+<!-- end table -->
 
 </div>
 
