--- a/public/admin/update-news.twig
+++ b/public/admin/update-news.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% include 'admin/parts/head.twig' %}
+{% include 'admin/parts/head.twig' %}
 <body>
 
 <div class="container-fluid">
@@ -8,10 +8,8 @@
     <!-- navbar -->
 
 
-
-
     <!-- form -->
-    <div class="container">
+    <div class="container">{% for oneNew in news %}
         <div class="col-md-7 offset-2">
             <a href="/dashboard" class="btn btn-light go-back" role="button">Go Back</a>
             <!-- form  -->
@@ -23,51 +21,63 @@
                 <div class="card-body">
                     <form action="#" method="post">
                         <div class="form-group">
-                            <img src="https://i.imgur.com/KOLbQBX.png" class="w-100" alt="">
+                            <img src="{{ oneNew.images.url }}" class="w-100" alt="">
                         </div>
                         <div class="col-12 text-center mb-4">
                             <button type="submit" class="btn btn-danger" role="button">Delete</button>
                         </div>
                     </form>
-                    <form class="form" action="/news/update/{{ news.id }}" method="POST" id="news-form">
+                    <form class="form" action="/news/update/{{ oneNew.id }}" method="POST" id="news-form">
                         <div class="form-group">
                             <label for="title">Izmeni Naslov</label>
-                            <input type="text" class="form-control" name="title" value="{{ news.title }}">
+                            <input type="text" class="form-control" name="title" value="{{ oneNew.title }}">
                         </div>
                         <div class="form-group">
                             <label for="content">Izmeni Tekst</label>
                             <div class="row mb-1">
                                 <div class="col-lg-12">
-                                    <textarea rows="9" name="content" id="content" class="form-control">{{ news.content }}</textarea>
+                                    <textarea rows="9" name="content" id="content"
+                                              class="form-control">{{ oneNew.content }}</textarea>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="category">Izaberi Kategoriju</label>
-                            <select  name="category" class="form-control">
-                                <option value="projekt"{% if news.category == 'projekt' %} selected="selected" {% endif %}>projekt</option>
-                                <option value="blog"{% if news.category == 'blog' %} selected="selected" {% endif %}>blog</option>
-                                <option value="vest"{% if news.category == 'vest' %} selected="selected" {% endif %}>vest</option>
+                            <select name="category" class="form-control">
+                                <option value="projekt"{% if oneNew.category == 'projekt' %} selected="selected" {% endif %}>
+                                    projekt
+                                </option>
+                                <option value="blog"{% if oneNew.category == 'blog' %} selected="selected" {% endif %}>
+                                    blog
+                                </option>
+                                <option value="vest"{% if oneNew.category == 'vest' %} selected="selected" {% endif %}>
+                                    vest
+                                </option>
                             </select>
                         </div>
-                        <div class="form-group">
+                        {#<div class="form-group">
                             <label for="image">Unesi Sliku</label>
                             <input type="file" class="form-control" name="image" value="{{ news.image }}" >
-                        </div>
+                        </div>#}
                         <div class="form-group">
                             <label for="language">Izaberi Jezik</label>
                             <select id="language" name="language" class="form-control">
-                                <option value="serbian"{% if news.language == 'serbian' %} selected="selected" {% endif %}>serbian</option>
-                                <option value="english"{% if news.language == 'english' %} selected="selected" {% endif %}>english</option>
+                                <option value="serbian"{% if oneNew.language == 'serbian' %} selected="selected" {% endif %}>
+                                    serbian
+                                </option>
+                                <option value="english"{% if oneNew.language == 'english' %} selected="selected" {% endif %}>
+                                    english
+                                </option>
                             </select>
                         </div>
-                        <button type="submit" class="btn btn-success btn-lg float-right" id="btnCreate">Potvrdi Izmene</button>
+                        <button type="submit" class="btn btn-success btn-lg float-right" id="btnCreate">Potvrdi Izmene
+                        </button>
                     </form>
                 </div>
                 <!--/card-body-->
             </div>
             <!-- /form -->
-        </div>
+        </div>{% endfor %}
     </div>
     <!-- end form -->
 
