--- a/public/admin/single-news.twig
+++ b/public/admin/single-news.twig
@@ -37,7 +37,7 @@
             <!--card body-->
             <div class="card-body">
                 <div class="form-group">
-                    <img src="https://i.imgur.com/KOLbQBX.png" class="w-100" alt="">
+                    <img src="{{ news.images.url }}" class="w-100" alt="">
                 </div>
                     <div class="form-group">
                         <p><b>Naslov:</b></p><p>{{ news.title }}<span class="float-right" style="margin-right:5px;">{{ news.created|date("M/d/Y") }}</span></p>
