--- a/public/admin/update-news.twig
+++ b/public/admin/update-news.twig
@@ -10,8 +10,8 @@
 
     <!-- form -->
     <div class="container">{% for oneNew in news %}
-        <div class="col-md-7 offset-2">
-            <a href="/dashboard" class="btn btn-light go-back" role="button">Go Back</a>
+            <div class="col-md-7 offset-2">
+            <a href="/news/news" class="btn btn-light go-back" role="button">News</a>
             <!-- form  -->
             <div class="card card-outline-secondary NewsForm">
                 <div class="card-header">
@@ -77,7 +77,7 @@
                 <!--/card-body-->
             </div>
             <!-- /form -->
-        </div>{% endfor %}
+            </div>{% endfor %}
     </div>
     <!-- end form -->
 
