--- a/public/admin/album/albums.twig
+++ b/public/admin/album/albums.twig
@@ -22,7 +22,7 @@
             <a class="navbar-brand" href="#">upnp</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/dashboard">News</a>
+                    <a class="nav-link" href="/news/news">News</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/album/albums">Albums</a>
@@ -70,19 +70,22 @@
                     <form class="form" action="#">
                         <div class="row mb-2">
                             {% for album in albums %}
-                            <div class="col-md-4 my-2">
-                                <div class="card">
-                                    <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">{{ album.title }}</h5>
-                                        <a href="#" class="btn btn-primary float-left mr-1" role="button">Edit</a>
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger float-left px-3 py-2" role="button">Delete
-                                            </button>
-                                        </form>
+                                <div class="col-md-4 my-2">
+                                    <div class="card">
+                                        <img class="card-img-top" src="https://i.imgur.com/KOLbQBX.png"
+                                             alt="Card image cap">
+                                        <div class="card-body">
+                                            <h5 class="card-title">{{ album.title }}</h5>
+                                            <a href="/album/edit/{{ album.id }}" class="btn btn-primary float-left mr-1"
+                                               role="button">Edit</a>
+                                            <form action="#" method="post">
+                                                <button type="submit" class="btn btn-danger float-left px-3 py-2"
+                                                        role="button">Delete
+                                                </button>
+                                            </form>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
                             {% endfor %}
                         </div>
                         <div class="admin-buttons">
