--- a/public/admin/album/edit.twig
+++ b/public/admin/album/edit.twig
@@ -22,7 +22,7 @@
             <a class="navbar-brand" href="#">upnp</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/dashboard">News</a>
+                    <a class="nav-link" href="/news/news">News</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/album/albums">Albums</a>
@@ -54,144 +54,75 @@
     <!-- form -->
     <div class="container">
         <div class="col-md-10 offset-1">
-            <a href="/dashboard" class="btn btn-light go-back" role="button">Go Back</a>
+            <a href="/album/albums" class="btn btn-light go-back" role="button">Albums</a>
             <!-- form  -->
             <div class="card card-outline-secondary NewsForm">
                 <div class="card-header">
-                    <h3 class="mb-0 headingForm">Edit Album</h3>
+                    <h3 class="mb-0 headingForm">{{ album.title }}</h3>
                 </div>
                 <!--card body-->
                 <div class="card-body">
-                    <form class="form" action="/album/edit" method="POST" id="createForm" enctype="multipart/form-data">
+                    <form class="form" action="/album/update/{{ album.id }}" method="POST" id="createForm" enctype="multipart/form-data">
                         <div class="form-group">
                             <label for="title">Izmeni Naslov</label>
-                            <input type="text" class="form-control" name="title">
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-md-4 my-2">
-                                <div class="thumbnail">
-                                    <a href="https://i.imgur.com/KOLbQBX.png">
-                                        <img src="https://i.imgur.com/KOLbQBX.png" alt="Fjords" style="width:100%"
-                                             class="mb-1">
-                                    </a>
-                                    <div class="caption text-center">
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger" role="button">
-                                                Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="thumbnail">
-                                    <a href="https://i.imgur.com/KOLbQBX.png">
-                                        <img src="https://i.imgur.com/KOLbQBX.png" alt="Fjords" style="width:100%"
-                                             class="mb-1">
-                                    </a>
-                                    <div class="caption text-center">
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger" role="button">
-                                                Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="thumbnail">
-                                    <a href="https://i.imgur.com/KOLbQBX.png">
-                                        <img src="https://i.imgur.com/KOLbQBX.png" alt="Fjords" style="width:100%"
-                                             class="mb-1">
-                                    </a>
-                                    <div class="caption text-center">
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger" role="button">
-                                                Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="thumbnail">
-                                    <a href="https://i.imgur.com/KOLbQBX.png">
-                                        <img src="https://i.imgur.com/KOLbQBX.png" alt="Fjords" style="width:100%"
-                                             class="mb-1">
-                                    </a>
-                                    <div class="caption text-center">
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger" role="button">
-                                                Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="thumbnail">
-                                    <a href="https://i.imgur.com/KOLbQBX.png">
-                                        <img src="https://i.imgur.com/KOLbQBX.png" alt="Fjords" style="width:100%"
-                                             class="mb-1">
-                                    </a>
-                                    <div class="caption text-center">
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger" role="button">
-                                                Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 my-2">
-                                <div class="thumbnail">
-                                    <a href="https://i.imgur.com/KOLbQBX.png">
-                                        <img src="https://i.imgur.com/KOLbQBX.png" alt="Fjords" style="width:100%"
-                                             class="mb-1">
-                                    </a>
-                                    <div class="caption text-center">
-                                        <form action="#" method="post">
-                                            <button type="submit" class="btn btn-danger" role="button">
-                                                Delete
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <div class="col-6">
-                                <form class="form" action="/news/create" method="POST" id="createForm"
-                                      enctype="multipart/form-data">
-                                    <div class="form-group">
-                                        <label for="image">Unesi Sliku</label>
-                                        <input type="file" class="form-control" name="image"
-                                               accept="image/jpeg,image/png,image/jpg">
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="col-6">
-                                <div class="admin-buttons">
-                                    <button type="submit" class="btn btn-success px-3 py-2 float-right ml-1">Confirm
-                                    </button>
-                                    <form action="#" method="post">
-                                        <button type="submit" class="btn btn-danger float-right px-3 py-2" role="button">Delete
-                                        </button>
-                                    </form>
-                                </div>
-                            </div>
+                            <input type="text" class="form-control" name="title" value="{{ album.title }}">
+                            <button type="submit" class="btn btn-success mt-1">Confirm
+                            </button>
                         </div>
                     </form>
+                    <div class="row">
+                        <div class="col-6">
+                            <form class="form" action="/album/upload/{{ album.id }}" method="POST" id="createForm"
+                                  enctype="multipart/form-data">
+                                <div class="form-group">
+                                    <label for="image">Unesi Sliku</label>
+                                    <input type="file" class="form-control" name="image"
+                                           accept="image/jpeg,image/png,image/jpg">
+                                    <button type="submit" class="btn btn-success mt-1">Confirm
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="col-6">
+                            <div class="admin-buttons">
+                                <form action="#" method="post">
+                                    <button type="submit" class="btn btn-danger float-right px-3 py-2"
+                                            role="button">Delete
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    </form>
+                    <hr>
+                    <div class="row mb-2">
+                        {% for image in album.images %}
+                            <div class="col-md-4 my-2">
+                                <div class="thumbnail">
+                                    <a href="">
+                                        <img src="{{ image.url }}" alt="Fjords" style="width:100%"
+                                             class="mb-1">
+                                    </a>
+                                    <div class="caption text-center">
+                                        <form action="/album/image/{{ image.id }}" method="post">
+                                            <button type="submit" class="btn btn-danger" role="button">
+                                                Delete
+                                            </button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                        <hr>
+                    </div>
+                    <!--/card-body-->
                 </div>
-                <!--/card-body-->
+                <!-- /form -->
             </div>
-            <!-- /form -->
         </div>
-    </div>
-    <!-- end form -->
+        <!-- end form -->
 
-</div>
+    </div>
 </body>
 <script src="/public/admin/assets/validation.js"></script>
 </html>
