--- a/public/admin/create-news.twig
+++ b/public/admin/create-news.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% include 'admin/parts/head.twig' %}
+{% include 'admin/parts/head.twig' %}
 <body>
 
 <div class="container-fluid">
@@ -14,7 +14,7 @@
     {% endif %}
 
     {% if error_message is defined %}
-        <div   class="alert alert-danger"  role="alert">
+        <div class="alert alert-danger" role="alert">
             <strong>Uporozenje!</strong> {{ error_message }}
         </div>
     {% endif %}
@@ -22,7 +22,7 @@
     <!-- form -->
     <div class="container">
         <div class="col-md-7 offset-2">
-            <a href="/dashboard" class="btn btn-light go-back" role="button">Go Back</a>
+            <a href="/news/news" class="btn btn-light go-back" role="button">News</a>
             <!-- form  -->
             <div class="card card-outline-secondary NewsForm">
                 <div class="card-header">
@@ -30,10 +30,11 @@
                 </div>
                 <!--card body-->
                 <div class="card-body">
-                    <form class="form" action="/news/create" method="POST" id="createForm" enctype="multipart/form-data">
+                    <form class="form" action="/news/create" method="POST" id="createForm"
+                          enctype="multipart/form-data">
                         <div class="form-group">
                             <label for="title">Unesi Naslov</label>
-                            <input type="text" class="form-control" name="title" >
+                            <input type="text" class="form-control" name="title">
                         </div>
                         <div class="form-group">
                             <label for="content">Unesi Tekst</label>
@@ -45,7 +46,7 @@
                         </div>
                         <div class="form-group">
                             <label for="category">Izaberi Kategoriju</label>
-                            <select  name="category" class="form-control">
+                            <select name="category" class="form-control">
                                 <option value="projekt">projekt</option>
                                 <option value="blog">blog</option>
                                 <option value="vest">vest</option>
@@ -53,15 +54,8 @@
                         </div>
                         <div class="form-group">
                             <label for="image">Unesi Sliku</label>
-                            <input type="file" class="form-control" name="image" accept="image/jpeg,image/png,image/jpg">
-                        </div>
-                        <div class="form-group">
-                            <label for="category">Izaberi Album</label>
-                            <select  name="album" class="form-control">
-                                {% for album in albums %}
-                                <option value="{{ album.id }}">{{ album.title }}</option>
-                                {% endfor %}
-                            </select>
+                            <input type="file" class="form-control" name="image"
+                                   accept="image/jpeg,image/png,image/jpg">
                         </div>
                         <div class="form-group">
                             <label for="language">Izaberi Jezik</label>
@@ -82,5 +76,5 @@
 
 </div>
 </body>
-    <script src="/public/admin/assets/validation.js"></script>
+<script src="/public/admin/assets/validation.js"></script>
 </html>
