--- a/public/admin/album/info.twig
+++ b/public/admin/album/info.twig
@@ -1,60 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Dashboard</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/public/admin/assets/css/admin-style.css">
-    <script src="/public/admin/assets/js/additional-methods.min.js"></script>
-    <script src="/public/admin/assets/js/jquery.validate.min.js"></script>
-</head>
+{% include 'admin/news/parts/head.twig' %}
 <body>
 
 <div class="container-fluid">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="container">
-
-            <!-- Brand -->
-            <a class="navbar-brand" href="#">upnp</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/news/news">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/album/albums">Albums</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/news/create">Create News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/album/create">Create Album</a>
-                </li>
-            </ul>
-            <!-- Links -->
-            <div class="navbar-collapse justify-content-end" id="nav-content">
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                            Welcome admin
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="/logout">Logout</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    {% include 'admin/news/parts/header.twig' %}
     <!-- navbar -->
 
     <!-- form -->
     <div class="container">
         <div class="col-md-10 offset-1">
-            <a href="/album/albums" class="btn btn-light go-back" role="button">Albums</a>
+            <a href="/album/" class="btn btn-light go-back" role="button">Albums</a>
             <!-- form  -->
             <div class="card card-outline-secondary NewsForm">
                 <div class="card-header">
@@ -64,24 +20,28 @@
                 <div class="card-body">
                     <form class="form" action="/album/edit" method="POST" id="createForm" enctype="multipart/form-data">
                         <div class="form-group">
-                            <label for="title">Naslov: {{ album.title }}</label>
+                            <label for="title"><b>Naslov: </b> {{ album.title }}</label>
+                        </div>
+                        <div class="form-group">
+                            <label for="title"><b>Naslov na Engleskom: </b> {{ album.english_title }}</label>
                         </div>
                         <div class="row mb-2 ">
                             {% for image in album.images %}
-                            <div class="col-md-4 my-2">
-                                <div class="thumbnail">
-                                    <a href="">
-                                        <img src="{{ image.url }}" alt="Lights" style="width:100%">
-                                    </a>
+                                <div class="col-md-4 my-2">
+                                    <div class="thumbnail">
+                                        <a href="">
+                                            <img src="{{ image.url }}" alt="Lights" style="width:100%">
+                                        </a>
+                                    </div>
                                 </div>
-                            </div>
                             {% endfor %}
                         </div>
                         <div class="admin-buttons">
                             {#<form action="#" method="post">
                                 <button type="submit" class="btn btn-danger float-right" role="button">Delete</button>
                             </form>#}
-                            <a href="/album/edit/{{ album.id }}" class="btn btn-primary float-right" role="button">Edit</a>
+                            <a href="/album/edit/{{ album.id }}" class="btn btn-primary float-right"
+                               role="button">Edit</a>
                         </div>
                     </form>
                 </div>
