--- a/public/admin/news/parts/header.twig
+++ b/public/admin/news/parts/header.twig
@@ -5,10 +5,10 @@
         <a class="navbar-brand" href="#">upnp</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/news/news">News</a>
+                <a class="nav-link" href="/news/">News</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/album/albums">Albums</a>
+                <a class="nav-link" href="/album/">Albums</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/news/create">Create News</a>
