--- a/public/admin/news/parts/head.twig
+++ b/public/admin/news/parts/head.twig
@@ -1,5 +1,5 @@
 <head>
-    <title>Dashboard</title>
+    <title>Upnp</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
