--- a/public/admin/news/parts/header.twig
+++ b/public/admin/news/parts/header.twig
@@ -1,8 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container">
-
-        <!-- Brand -->
-        <a class="navbar-brand" href="#">upnp</a>
+        <a class="navbar-brand" href="/news/">upnp</a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="/news/">News</a>
@@ -17,7 +15,6 @@
                 <a class="nav-link" href="/album/create">Create Album</a>
             </li>
         </ul>
-        <!-- Links -->
         <div class="navbar-collapse justify-content-end" id="nav-content">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
